@@ -153,6 +153,9 @@ Release 0.21.0 - 2010-07-01
 
   IMPROVEMENTS
 
+    HDFS-1174. New properties for suspend and resume process. (Vinay Thota via
+    cos)
+
     HDFS-1199. Extract a subset of tests for smoke (DOA) validation. (cos)
 
     HDFS-381. Remove blocks from DataNode maps when corresponding file
